added static artifacts

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<a href="/concept"><button class="ui basic green button">Concept</button></a>
 <div class="ui doubling cards">
   <div class="card">
     <div class="image">
